Table Circuit {
  id big_auto [pk, unique]
  reference char [null, unique]
  name char 
  locality char [null]
  country char [null]
  location None [null]
  altitude float [null]
  wikipedia url [null]
  Note: '''Race venue information'''
}


Table Driver {
  id big_auto [pk, unique]
  reference char [null, unique]
  forename char 
  surname char 
  abbreviation char [null]
  nationality char [null]
  permanent_car_number positive_small_integer [null]
  date_of_birth date [null]
  wikipedia url [null]
  Note: '''Session Participant / Racing Driver Information

    May track reserve drivers with no sessions, or junior drivers only taking part in practice sessions.'''
}


Table Lap {
  id big_auto [pk, unique]
  session_entry foreign_key 
  number positive_small_integer [null]
  position positive_small_integer [null]
  time duration [null]
  average_speed float [null]
  Note: '''Information on a driven Lap of Race, Qualifying, or any other session for a driver'''
}
ref: Lap.session_entry > SessionEntry.id


Table DriverStanding {
  id big_auto [pk, unique]
  session foreign_key 
  driver foreign_key 
  year small_integer 
  round positive_small_integer 
  position small_integer [null]
  points float 
  win_count small_integer 
  highest_finish small_integer [null]
  finish_string char 
  is_disqualified boolean 
  season foreign_key [null]
  race foreign_key [null]
  Note: '''DriverStanding(id, session, driver, year, round, position, points, win_count, highest_finish, finish_string, is_disqualified, season, race)'''
}
ref: DriverStanding.session > Session.id
ref: DriverStanding.driver > Driver.id
ref: DriverStanding.season > Season.id
ref: DriverStanding.race > Race.id


Table PitStop {
  id big_auto [pk, unique]
  session_entry foreign_key 
  lap one_to_one [null, unique]
  number positive_small_integer [null]
  duration duration [null]
  local_timestamp char [null]
  Note: '''Pit Stop information for a session'''
}
ref: PitStop.session_entry > SessionEntry.id
ref: PitStop.lap - Lap.id


Table PointSystem {
  id big_auto [pk, unique]
  reference char [null, unique]
  name char [null]
  driver_position_points positive_small_integer 
  driver_fastest_lap positive_small_integer 
  team_position_points positive_small_integer 
  team_fastest_lap positive_small_integer 
  partial positive_small_integer 
  shared_drive positive_small_integer 
  is_double_points boolean 
  Note: '''Session point calculation rules'''
}


Table ChampionshipSystem {
  id big_auto [pk, unique]
  reference char [null, unique]
  name char [null]
  driver_season_split positive_small_integer 
  driver_best_results small_integer 
  team_season_split positive_small_integer 
  team_best_results small_integer 
  Note: '''Drivers and Team Championship score calculation rules'''
}


Table Race {
  id big_auto [pk, unique]
  season foreign_key 
  circuit foreign_key 
  round positive_small_integer [null]
  name char [null]
  date date [null]
  race_number positive_small_integer [null]
  wikipedia url [null]
  is_cancelled boolean 
  Note: '''Race event information relevent to all sessions'''
}
ref: Race.season > Season.id
ref: Race.circuit > Circuit.id


Table RaceEntry {
  id big_auto [pk, unique]
  race foreign_key 
  team_driver foreign_key 
  car_number positive_small_integer [null]
  Note: '''All data relating to a driver racing for a specific team for a race'''
}
ref: RaceEntry.race > Race.id
ref: RaceEntry.team_driver > TeamDriver.id


Table Season {
  id big_auto [pk, unique]
  championship_system foreign_key [null]
  year small_integer [unique]
  wikipedia url [null]
  Note: '''Formula 1 Championship season'''
}
ref: Season.championship_system > ChampionshipSystem.id


Table Session {
  id big_auto [pk, unique]
  race foreign_key 
  point_system foreign_key 
  type char 
  date date [null]
  time time [null]
  scheduled_laps positive_small_integer [null]
  is_cancelled boolean 
  Note: '''Information about a scheduled session where cars are on track'''
}
ref: Session.race > Race.id
ref: Session.point_system > PointSystem.id


Table SessionEntry {
  id big_auto [pk, unique]
  session foreign_key 
  round_entry foreign_key 
  fastest_lap foreign_key [null]
  position positive_small_integer [null]
  is_classified boolean [null]
  status positive_small_integer [null]
  detail char [null]
  points float [null]
  is_eligible_for_points boolean 
  grid positive_small_integer [null]
  time duration [null]
  fastest_lap_rank positive_small_integer [null]
  laps_completed positive_small_integer [null]
  Note: '''All information for a race entry for the session'''
}
ref: SessionEntry.session > Session.id
ref: SessionEntry.round_entry > RaceEntry.id
ref: SessionEntry.fastest_lap > Lap.id


Table Penalty {
  id big_auto [pk, unique]
  earned foreign_key [null]
  served foreign_key [null]
  license_points positive_small_integer [null]
  position positive_small_integer [null]
  time duration [null]
  is_time_served_in_pit boolean [null]
  Note: '''Penalty given/served in an entry's session'''
}
ref: Penalty.earned > SessionEntry.id
ref: Penalty.served > SessionEntry.id


Table BaseTeam {
  id big_auto [pk, unique]
  name char [null, unique]
  Note: '''Underlying Team ignoring rebrands'''
}


Table Team {
  id big_auto [pk, unique]
  base_team foreign_key [null]
  reference char [null, unique]
  name char 
  nationality char [null]
  wikipedia url [null]
  Note: '''Information about a Constructor / Team'''
}
ref: Team.base_team > BaseTeam.id


Table TeamDriver {
  id big_auto [pk, unique]
  team foreign_key 
  driver foreign_key 
  season foreign_key 
  role positive_small_integer [null]
  Note: '''Membership of a Driver to a Team for a given season'''
}
ref: TeamDriver.team > Team.id
ref: TeamDriver.driver > Driver.id
ref: TeamDriver.season > Season.id


